# spdm-emu-main

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: chunk_check.yml  chunk_device_sample.yml  pqc_check.yml
doc/: spdm_emu.md
io-device-sim/: CMakeLists.txt  device_secret_lib.c  measurements.c
io_device_sim/: CMakeLists.txt  device_main.c  device_secret_lib.c
io_device_sim/tmp/: CMakeLists.txt
spdm_emu/spdm_device_verifier_tool/: CoRimTool.py  readme.md  requirements.txt
spdm_emu/spdm_device_verifier_tool/SampleTestKey/: ecc-private-key.pem  ecc-public-key.pem  example.cer.pem  example.key.pem
spdm_emu/spdm_requester_emu/: spdm_requester_endpoint_info.c
